--- a/hello-world-python/Dockerfile
+++ b/hello-world-python/Dockerfile
@@ -5,3 +5,7 @@ COPY . /app
 RUN pip install -r requirements.txt
 EXPOSE 5000
 CMD python ./launch.py
+
+# COPY requirements.txt /app/requirements.txt
+# ENTRYPOINT [ "python", "./launch.py"]
+
